# picoface_poc

./: .gitignore  README.md  clip_to_scr.py  data.scr  picoface.code-workspace  picorom.code-workspace  requirements.txt
gal/: GAL16v8_A.chp  GAL16v8_A.fus  GAL16v8_A.jed  GAL16v8_A.pin  GAL16v8_A.pld  GAL16v8_B.chp  GAL16v8_B.fus  GAL16v8_B.jed  GAL16v8_B.pin  GAL16v8_B.pld  GAL16v8_C.chp  GAL16v8_C.fus  GAL16v8_C.jed  GAL16v8_C.pin  GAL16v8_C.pld  GAL16v8_D.fus  GAL16v8_D.pld  GAL22V10.chp  GAL22V10.fus  GAL22V10.jed  GAL22V10.pin  GAL22V10.pld  readme.md  updatesym.py
nmirom/: .gitignore  nmirom.asm  to_c_file.py
pico/: CMakeLists.txt  asm_to_c_file.py  http_server.h  notes.md  picoface.cxx  picoface.h  piohandler.S  usb_command_handler.cxx  usb_command_handler.h
pico/littlefs-lib/: pico_hal.c
picorom/: CMakeLists.txt  abc.sna  asm_to_c_file.py  blink.pio  buildnmi.sh  convertZ80.py  convert_sna.py  demo.asm  demo.lst  demo.py  drag_drop.py  file_wrapper.cxx  file_wrapper.h  http_server.c  http_server.cxx  http_server.h  knight.c  manic.c  matchday2.c  mysnap.sna  nmi.c  nmi.h  notes.md  picorom.c  picorom.cxx  picorom.h  picorom.pio  piohandler.S  rom.c  sd_config.c  upload.py  upload_sna.py  usb.py  usb_command_handler.cxx  usb_command_handler.h
picorom/littlefs-lib/: pico_hal.c
picorom/sna/: Atic.sna  BoulderDash.sna  Commando.sna  Fist.sna  Jetman.sna  Knight.sna  Manic Miner.sna  Sabre.sna  SpyHunter.sna  Underwurlde.sna  Wheelie.sna  hobbit.sna  matchday2.sna  upload_sna.py
roms/: gw03.rom  romtoc.py
scripts/: convertZ80.py  convert_sna.py  create_snaps_zip.py  drag_drop.py  filemanager.py  filemanager.ui  filemanager_ui.py  snap_uploader.py  usb.py
